Add product insert on order and stock management on add

--- a/Workshop.Infra/Workshop.Infra.csproj
+++ b/Workshop.Infra/Workshop.Infra.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Workshop.Domain\Workshop.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
