--- a/Workshop.Api/Workshop.Api.csproj
+++ b/Workshop.Api/Workshop.Api.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Workshop.Infra\Workshop.Infra.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
