--- a/Workshop.UI/package.json
+++ b/Workshop.UI/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-router": "^1.40.0",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
+    "immer": "^10.1.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
