--- a/Workshop.UI/package.json
+++ b/Workshop.UI/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-select": "^5.8.0",
     "styled-components": "^6.1.11",
     "yup": "^1.4.0"
   },
