--- a/Workshop.Api/Workshop.Api.csproj
+++ b/Workshop.Api/Workshop.Api.csproj
@@ -26,4 +26,12 @@
     <ProjectReference Include="..\Workshop.Infra\Workshop.Infra.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.Development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
