--- a/Workshop.UI/package.json
+++ b/Workshop.UI/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.4.6",
     "immer": "^10.1.1",
     "moment": "^2.30.1",
+    "rc-switch": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
