--- a/Workshop.UI/package.json
+++ b/Workshop.UI/package.json
@@ -19,6 +19,7 @@
     "rc-switch": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
     "styled-components": "^6.1.11",
@@ -30,6 +31,7 @@
     "@tanstack/router-plugin": "^1.39.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-helmet": "^6.1.11",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
