--- a/Workshop.UI/package.json
+++ b/Workshop.UI/package.json
@@ -22,6 +22,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.11",
     "yup": "^1.4.0"
   },
